<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.MyOkHttpActivity"
    >
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <Button
          android:id="@+id/btn_http_get"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="onSyncClick"
          android:text="@string/http_sync_request"
          android:textSize="@dimen/btn_txt_size_16sp"
          />

      <Button
          android:id="@+id/btn_http_async_get"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="onAsyncGetClick"
          android:text="@string/http_async_get_request"
          android:textSize="@dimen/btn_txt_size_16sp"
          />

      <Button
          android:id="@+id/btn_http_async_post"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="onAsyncPostClick"
          android:text="@string/http_async_post_request"
          android:textSize="@dimen/btn_txt_size_16sp"
          />

      <Button
          android:id="@+id/btn_http_post_file"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="onPostFileClick"
          android:text="@string/async_post_file"
          android:textSize="@dimen/btn_txt_size_16sp"
          />

      <Button
          android:id="@+id/btn_http_download_file"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="onDownloadFileClick"
          android:text="@string/async_download_file"
          android:textSize="@dimen/btn_txt_size_16sp"
          />

      <ImageView
          android:id="@+id/iv_okhttp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:scaleType="centerInside"
          />

      <Button
          android:id="@+id/btn_http_Multipart_file"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="onMultipartFileClick"
          android:text="@string/multipart_pull_file"
          android:textSize="@dimen/btn_txt_size_16sp"
          android:textAllCaps="false"
          />

      <Button
          android:id="@+id/btn_cancle_request"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="onCancleRequestClick"
          android:text="@string/cancle_request"
          android:textSize="@dimen/btn_txt_size_16sp"
          android:textAllCaps="false"
          />

      <Button
          android:id="@+id/btn_get_by_engine"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="onGetByEngineClick"
          android:text="@string/okhttp_get_by_engine"
          android:textSize="@dimen/btn_txt_size_16sp"
          android:textAllCaps="false"
          />
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>