<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MyVolleyActivity"
    >
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        >
      <Button
          android:id="@+id/btn_string_request"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/string_request"

          />
      <Button
          android:id="@+id/btn_json_request"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/json_request"
          />
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >
        <Button
            android:id="@+id/btn_image_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_request"
            />
        <ImageView
            android:id="@+id/iv_volley"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_default"
            />
        <Button
            android:id="@+id/btn_image_request_imageloader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_request_imageloader"
            />
        <ImageView
            android:id="@+id/iv_volley2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_default"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/networkimageview_tips"/>
        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/iv_volley3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_default"
            />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>