<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_okhttp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/okhttp_use"
                android:textSize="@dimen/btn_txt_size_16sp" />

            <Button
                android:id="@+id/btn_volley"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/volley_use"
                android:textSize="@dimen/btn_txt_size_16sp" />

            <Button
                android:id="@+id/btn_retrofit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retrofit_use"
                android:onClick="retrofitUseClick"
                android:textSize="@dimen/btn_txt_size_16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>